--- a/src/index.css
+++ b/src/index.css
@@ -64,3 +64,28 @@
     @apply bg-background text-foreground;
   }
 }
+
+.varela-round-regular {
+  font-family: "Varela Round", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.nunito {
+  font-family: "Nunito", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Varela Round", sans-serif;
+}
+
+p {
+  font-family: "Nunito", sans-serif;
+}
+
+button {
+  font-family: "Nunito", sans-serif;
+}
